--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,7 +59,7 @@
     <UnityVersion>2022.3.20f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Users\admin\.vscode\extensions\visualstudiotoolsforunity.vstuc-1.0.3\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Users\admin\.vscode\extensions\visualstudiotoolsforunity.vstuc-1.0.4\Analyzers\Microsoft.Unity.Analyzers.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.20f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.SourceGenerators.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.20f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
@@ -67,10 +67,13 @@
     <Compile Include="Assets\Scripts\UI\OptionsMenu.cs" />
     <Compile Include="Assets\Scripts\CeilingLamp.cs" />
     <Compile Include="Assets\Scripts\AscendTrigger.cs" />
+    <Compile Include="Assets\Scripts\MiniGames\MG2\MiniGame2Manager.cs" />
     <Compile Include="Assets\Scripts\Interaction\Lamp.cs" />
     <Compile Include="Assets\Scripts\LightBridge.cs" />
     <Compile Include="Assets\Scripts\UI\MMContinueButton.cs" />
+    <Compile Include="Assets\Scripts\Interaction\DialogueInteractions\Day2DialogueManager.cs" />
     <Compile Include="Assets\Scripts\CheckPoint.cs" />
+    <Compile Include="Assets\Scripts\MiniGames\MG2\Coin.cs" />
     <Compile Include="Assets\Scripts\Player\Reality\PlayerInputController.cs" />
     <Compile Include="Assets\Ink\Demos\Basic Demo\Scripts\QuitGameOnKeypress.cs" />
     <Compile Include="Assets\Scripts\DialogueTrigger.cs" />
@@ -97,6 +100,7 @@
     <Compile Include="Assets\UnityTechnologies\ParticlePack\EffectExamples\Misc Effects\Scripts\SpawnEffect.cs" />
     <Compile Include="Assets\Scripts\Interaction\LightReceiver.cs" />
     <Compile Include="Assets\Scripts\Interaction\StandingTorch.cs" />
+    <Compile Include="Assets\Scripts\MiniGames\MG1\HandOption.cs" />
     <Compile Include="Assets\Scripts\Interaction\ITalkable.cs" />
     <Compile Include="Assets\Scripts\UI\HPBar.cs" />
     <Compile Include="Assets\Ink\Demos\Basic Demo\Scripts\BasicInkExample.cs" />
@@ -112,6 +116,7 @@
     <Compile Include="Assets\Scripts\KillZone.cs" />
     <Compile Include="Assets\Scripts\SaveLoadManager.cs" />
     <Compile Include="Assets\Scripts\AI\FearAI.cs" />
+    <Compile Include="Assets\Scripts\Interaction\DayEnding.cs" />
     <Compile Include="Assets\Scripts\UI\PauseMenuManager.cs" />
     <Compile Include="Assets\Scripts\Interaction\DialogueInteractions\Day1FirstInteraction.cs" />
     <Compile Include="Assets\Scripts\Interaction\Projectile.cs" />
@@ -130,7 +135,6 @@
     <Compile Include="Assets\Scripts\MovingPlatform.cs" />
     <Compile Include="Assets\Scripts\Dithering\DitheringController.cs" />
     <Compile Include="Assets\Scripts\Interaction\MovingPlatformRemote.cs" />
-    <Compile Include="Assets\Scripts\Interaction\HandOption.cs" />
     <Compile Include="Assets\UnityTechnologies\ParticlePack\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Scripts\Interaction\IDamageable.cs" />
     <Compile Include="Assets\Scripts\Fog\FogController.cs" />
