--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Scripts\MiniGames\MG3\MiniGame3Manager.cs" />
     <Compile Include="Assets\Scripts\UI\MMContinueButton.cs" />
     <Compile Include="Assets\Scripts\Player\Reality\PlayerInputController.cs" />
+    <Compile Include="Assets\Scripts\MiniGames\MG4\MG4AttackBoard.cs" />
     <Compile Include="Assets\Scripts\Interaction\Interactable.cs" />
     <Compile Include="Assets\Scripts\Interaction\sign.cs" />
     <Compile Include="Assets\Scripts\Dithering\Dithering.cs" />
@@ -110,6 +111,7 @@
     <Compile Include="Assets\Scripts\MiniGames\MG2\Coin.cs" />
     <Compile Include="Assets\Ink\Demos\Basic Demo\Scripts\QuitGameOnKeypress.cs" />
     <Compile Include="Assets\Scripts\DialogueTrigger.cs" />
+    <Compile Include="Assets\Scripts\MiniGames\MG4\MiniGame4MarkableSlot.cs" />
     <Compile Include="Assets\UnityTechnologies\ParticlePack\Shared\Ramps\Runtime\RampAsset.cs" />
     <Compile Include="Assets\UnityTechnologies\ParticlePack\Shared\Scripts\AdjustTimeScale.cs" />
     <Compile Include="Assets\UnityTechnologies\ParticlePack\Shared\Scripts\SimpleCameraController.cs" />
@@ -130,9 +132,11 @@
     <Compile Include="Assets\Scripts\Player\PlayerData.cs" />
     <Compile Include="Assets\Scripts\MiniGames\MG3\MarkableSlot.cs" />
     <Compile Include="Assets\Scripts\DoorCloseTrigger.cs" />
+    <Compile Include="Assets\Scripts\MiniGames\MG4\MiniGame4Manager.cs" />
     <Compile Include="Assets\Scripts\Player\Dream\DreamPlayerCam.cs" />
     <Compile Include="Assets\Scripts\SaveLoadManager.cs" />
     <Compile Include="Assets\Scripts\AI\FearAI.cs" />
+    <Compile Include="Assets\Scripts\MiniGames\MG4\MG4PlayerBoard.cs" />
     <Compile Include="Assets\Scripts\Interaction\DialogueInteractions\Day1FirstInteraction.cs" />
     <Compile Include="Assets\Scripts\Interaction\FearArea.cs" />
     <Compile Include="Assets\Scripts\Player\Dream\FlashlightManager.cs" />
