--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,11 +77,14 @@
     <Compile Include="Assets\Scripts\Interaction\sign.cs" />
     <Compile Include="Assets\Scripts\Dithering\Dithering.cs" />
     <Compile Include="Assets\Scripts\RandomSoundManager.cs" />
+    <Compile Include="Assets\Scripts\Triggers\AscendTrigger.cs" />
     <Compile Include="Assets\Scripts\Player\Reality\PlayerRay.cs" />
     <Compile Include="Assets\Scripts\Interaction\TempleDoor.cs" />
     <Compile Include="Assets\Scripts\Pixelation\PixelationRenderFeature.cs" />
     <Compile Include="Assets\Scripts\Interaction\testInteraction.cs" />
+    <Compile Include="Assets\Scripts\Triggers\PlatformTrigger.cs" />
     <Compile Include="Assets\UnityTechnologies\ParticlePack\EffectExamples\Misc Effects\Scripts\SpawnEffect.cs" />
+    <Compile Include="Assets\Scripts\Triggers\FallingBlock.cs" />
     <Compile Include="Assets\Scripts\Interaction\LightReceiver.cs" />
     <Compile Include="Assets\Scripts\MiniGames\MG1\HandOption.cs" />
     <Compile Include="Assets\Scripts\Interaction\ITalkable.cs" />
@@ -90,29 +93,30 @@
     <Compile Include="Assets\Scripts\Player\Dream\DreamPlayerInputController.cs" />
     <Compile Include="Assets\Scripts\Pixelation\PixelationController.cs" />
     <Compile Include="Assets\Scripts\Player\Reality\PlayerCam.cs" />
-    <Compile Include="Assets\Scripts\KillZone.cs" />
     <Compile Include="Assets\Scripts\Interaction\DayEnding.cs" />
     <Compile Include="Assets\Scripts\UI\PauseMenuManager.cs" />
     <Compile Include="Assets\Scripts\Interaction\Projectile.cs" />
     <Compile Include="Assets\Scripts\Dithering\DitheringRenderFeature.cs" />
     <Compile Include="Assets\Scripts\Interaction\Lever.cs" />
     <Compile Include="Assets\Scripts\SceneChangeTrigger.cs" />
+    <Compile Include="Assets\Scripts\Interaction\GreenCrystal.cs" />
     <Compile Include="Assets\UnityTechnologies\ParticlePack\Shared\Scripts\ProximityActivate.cs" />
+    <Compile Include="Assets\Scripts\Triggers\CheckPoint.cs" />
     <Compile Include="Assets\Scripts\Interaction\MovingPlatformManual.cs" />
     <Compile Include="Assets\Scripts\Player\Dream\DreamPlayerController.cs" />
     <Compile Include="Assets\Scripts\Interaction\MovingPlatformRemote.cs" />
     <Compile Include="Assets\UnityTechnologies\ParticlePack\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Scripts\Fog\FogController.cs" />
+    <Compile Include="Assets\Scripts\Triggers\DoorCloseTrigger.cs" />
     <Compile Include="Assets\Scripts\MiniGames\MG1\MiniGame1Manager.cs" />
+    <Compile Include="Assets\Scripts\Triggers\KillZone.cs" />
     <Compile Include="Assets\Scripts\UI\OptionsMenu.cs" />
-    <Compile Include="Assets\Scripts\AscendTrigger.cs" />
+    <Compile Include="Assets\Scripts\Interaction\BigGreenCrystal.cs" />
     <Compile Include="Assets\Scripts\MiniGames\MG2\MiniGame2Manager.cs" />
     <Compile Include="Assets\Scripts\LightBridge.cs" />
     <Compile Include="Assets\Scripts\Interaction\DialogueInteractions\Day2DialogueManager.cs" />
-    <Compile Include="Assets\Scripts\CheckPoint.cs" />
     <Compile Include="Assets\Scripts\MiniGames\MG2\Coin.cs" />
     <Compile Include="Assets\Ink\Demos\Basic Demo\Scripts\QuitGameOnKeypress.cs" />
-    <Compile Include="Assets\Scripts\DialogueTrigger.cs" />
     <Compile Include="Assets\Scripts\MiniGames\MG4\MiniGame4MarkableSlot.cs" />
     <Compile Include="Assets\UnityTechnologies\ParticlePack\Shared\Ramps\Runtime\RampAsset.cs" />
     <Compile Include="Assets\UnityTechnologies\ParticlePack\Shared\Scripts\AdjustTimeScale.cs" />
@@ -131,11 +135,12 @@
     <Compile Include="Assets\Scripts\Interaction\DialogueInteractions\Day3DialogueManager.cs" />
     <Compile Include="Assets\Scripts\Interaction\StandingTorch.cs" />
     <Compile Include="Assets\Scripts\UI\HPBar.cs" />
+    <Compile Include="Assets\Scripts\Player\Dream\StepSoundManager.cs" />
     <Compile Include="Assets\Ink\Demos\Basic Demo\Scripts\BasicInkExample.cs" />
     <Compile Include="Assets\Scripts\Player\Dream\GameManager.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerData.cs" />
+    <Compile Include="Assets\Scripts\Triggers\DialogueTrigger.cs" />
     <Compile Include="Assets\Scripts\MiniGames\MG3\MarkableSlot.cs" />
-    <Compile Include="Assets\Scripts\DoorCloseTrigger.cs" />
     <Compile Include="Assets\Scripts\MiniGames\MG4\MiniGame4Manager.cs" />
     <Compile Include="Assets\Scripts\Player\Dream\DreamPlayerCam.cs" />
     <Compile Include="Assets\Scripts\SaveLoadManager.cs" />
@@ -153,7 +158,6 @@
     <Compile Include="Assets\Scripts\Dithering\DitheringController.cs" />
     <Compile Include="Assets\Scripts\Interaction\IDamageable.cs" />
     <Compile Include="Assets\Scripts\MiniGames\MG6\MG6Deck.cs" />
-    <Compile Include="Assets\Scripts\FallingBlock.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
